--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -6,7 +6,7 @@
     <title>Restaurant Master detail view</title>
   </head>
   <body>
-    <h1>Welcome to our Restaurant</h1>
+    <h1>Welcome to Coursera Restaurant</h1>
 
     <ui-view></ui-view>
 
